[gd_scene load_steps=7 format=3 uid="uid://6bho2f61e5x1"]

[ext_resource type="Script" path="res://Dialogue/textbox.gd" id="1_absi4"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_a8ve6"]
[ext_resource type="FontFile" uid="uid://vyib537i7v3x" path="res://Assets/Fonts/Kschwal Monospace.ttf" id="2_t1227"]
[ext_resource type="AudioStream" uid="uid://0ujemyda71ne" path="res://Assets/Audio/Soundbytes/txt.wav" id="4_fr65r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5d24i"]
content_margin_left = 40.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(1, 1, 1, 0.25098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oj3c8"]
content_margin_left = 40.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
draw_center = false

[node name="TextBox" type="CanvasLayer"]
layer = 100
script = ExtResource("1_absi4")

[node name="Balloon" type="ColorRect" parent="."]
custom_minimum_size = Vector2(900, 200)
offset_left = 30.0
offset_top = 20.0
offset_right = 930.0
offset_bottom = 220.0
color = Color(0, 0, 0, 1)

[node name="Margin" type="MarginContainer" parent="Balloon"]
layout_mode = 0
anchor_right = 1.0
offset_bottom = 119.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10
metadata/_edit_layout_mode = 1

[node name="VBox" type="VBoxContainer" parent="Balloon/Margin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/Margin/VBox"]
modulate = Color(1, 1, 1, 0.501961)
texture_filter = 2
layout_mode = 2
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("2_t1227")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[right]Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" parent="Balloon/Margin/VBox" instance=ExtResource("2_a8ve6")]
texture_filter = 2
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_t1227")
theme_override_font_sizes/normal_font_size = 30
text = "Dialogue"

[node name="Responses" type="HBoxContainer" parent="Balloon/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ResponseTemplate" type="RichTextLabel" parent="Balloon/Margin/VBox"]
unique_name_in_owner = true
texture_filter = 2
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_t1227")
theme_override_font_sizes/normal_font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_5d24i")
theme_override_styles/normal = SubResource("StyleBoxFlat_oj3c8")
bbcode_enabled = true
text = "Response"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false

[node name="Rect" type="ColorRect" parent="Balloon"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_fr65r")
max_polyphony = 5

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="resized" from="Balloon/Margin" to="." method="_on_margin_resized"]
[connection signal="spoke" from="Balloon/Margin/VBox/DialogueLabel" to="." method="type"]
